--- a/site-desordem/estilo2.css
+++ b/site-desordem/estilo2.css
@@ -15,4 +15,39 @@ h1 {
 body { 
     background-color: #777;
     
+    
+}
+.tudo{
+    display: flex;
+
+}
+.centro{
+    flex: 3;
+    text-align: center;
+    display: flex;
+    
+    
+}
+.canto{
+    flex: 1;
+    background-color: red;
+    padding-bottom: 800px;
+    font-size: 30px;
+
+}
+ul{
+    list-style-type: none;
+    
+}
+.peit{
+    margin-right: 20px;
+    flex: 1;
+}
+.cost{
+    margin-left: 20px;
+    flex: 1;
+}
+.brac{
+    margin-left: 20px;
+    margin-right: 20px;
 }
